--- a/style.css
+++ b/style.css
@@ -43,5 +43,24 @@ main {
     top: 80px;
     width: 270px ;
     height: 471px;
-    background-size: cover;
+    
+}
+
+#sociais img {
+    width: 100px; 
+    border-radius: 50%;
+    box-shadow: 6px 6px 10px black; 
+}
+
+#sociais {
+    text-align: right;
+    
+    
+}
+
+#sociais img:hover {
+    width: 120px;
+    border: 2px solid white;
+    box-shadow: 10px 10px 15px black;
+    transition: tra;
 }
